--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "fwbackups-1.43.4.tar.bz2": 5e1ec47c295b8e624ece8e9b5edb35a6cf3d45db
-  "fwbackups-po.tar.gz": f0a3c885d3a90b56b7e8ba0c96ad4e195b5d4851
+  fwbackups-1.43.6.tar.bz2: 71c3963a630b80c731472ab0cd559bde8258bd35
+  fwbackups-po.tar.gz: f0a3c885d3a90b56b7e8ba0c96ad4e195b5d4851
